EKS-Project/Manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 1jashshah/anotherbackend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: myapp
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - port: 5000        # Service port (inside cluster)
      targetPort: 5000  # Container port
      nodePort: 30050   # (optional) Port exposed on every worker node
